--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h2>LOFTY</h2>
         <img src="img/Lofty.jpg" alt="Lofty project" />
       </div>
-      <div class="project" onclick="openModal('img/loftyworks-popup.jpg')">
+      <div class="project" onclick="openModal('img/Loftyworks-popup.jpg')">
         <h2>LoftyWorks</h2>
         <img src="img/Loftyworks.jpg" alt="Website Templates" />
       </div>
