--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         color: #000;
         padding: 2rem;
         line-height: 1.6;
+        opacity: 0;
+        animation: fadeIn 3s ease forwards;
       }
       header {
         display: flex;
@@ -22,13 +24,26 @@
         margin-bottom: 2rem;
       }
       .bio {
-        max-width: 700px;
+        max-width:max-content;
         margin-bottom: 3rem;
+        font-size: 30px;
+        font-weight:200;
       }
+      @media (max-width: 768px) {
+  .bio {
+    font-size: 18px;  /* smaller font size on mobile */
+  }
+}
       h1 {
-        font-size: 2.5rem;
+        font-size: 4.5rem;
         margin: 0;
+        font-weight:500;
       }
+      @media (max-width: 768px) {
+  header h1 {
+    font-size: 40px; /* or whatever size you prefer */
+  }
+}
       .button {
         border: 1px solid #000;
         padding: 0.5rem 1rem;
@@ -46,22 +61,52 @@
         grid-template-columns: repeat(2, 1fr);
         gap: 2rem;
       }
-      .project {
-        display: flex;
-        flex-direction: column;
-        cursor: pointer;
-      }
+      @media (max-width: 768px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+}
       .project h2 {
         margin-bottom: 0.5rem;
         font-size: 1rem;
-        text-transform: uppercase;
-        letter-spacing: 0.05em;
+    
+     
+        font-weight: 500;
       }
+      .project {
+      display: flex;
+      flex-direction: column;
+      cursor: pointer;
+      }
+
       .project img {
-        width: 100%;
-        border-radius: 0.5rem;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      }
+  width: 100%;
+  object-fit: cover;
+  display: block;
+  transition: transform 0.3s ease;
+  transform-origin: center center;
+}
+
+
+.img-wrapper {
+  width: 100%;
+  height: 100%;           /* fixed height to control size */
+  overflow: hidden;        /* clip zoom */
+  position: relative;
+}
+
+.img-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: transform 0.3s ease;
+  transform-origin: center center;
+}
+
+.img-wrapper img:hover {
+  transform: scale(1.01);
+}
       /* Modal */
       .modal {
         display: none;
@@ -89,12 +134,20 @@
         font-weight:200;
         cursor: pointer;
       }
+      @keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+
+
+  
+}
     </style>
   </head>
   <body>
     <header>
-      <h1>WILSON YEUNG</h1>
-      <a href="#" class="button">Contact for business or request resume →</a>
+      <h1>Wilson's Portfolio</h1>
+      <!--<a href="#" class="button">Contact for business or request resume →</a>-->
     </header>
 
     <section class="bio">
@@ -107,33 +160,47 @@
 
     <section class="grid">
       <div class="project" onclick="openModal('img/Lofty-popup.jpg')">
-        <h2>LOFTY</h2>
+        <h2>Lofty</h2>
+        <div class="img-wrapper">
         <img src="img/Lofty.jpg" alt="Lofty project" />
       </div>
-      <div class="project" onclick="openModal('img/Loftyworks-popup.jpg')">
+      </div>
+      <div class="project" onclick="openModal('img/loftyworks-popup.jpg')">
         <h2>LoftyWorks</h2>
+        <div class="img-wrapper">
         <img src="img/Loftyworks.jpg" alt="Website Templates" />
       </div>
+    </div>
       <div class="project" onclick="openModal('img/IDX-popup.jpg')">
         <h2>LoftyIDX</h2>
+        <div class="img-wrapper">
         <img src="img/IDX.jpg" alt="AI Tool" />
       </div>
+    </div>
       <div class="project" onclick="openModal('img/All-History-popup.jpg')">
         <h2>All History</h2>
+        <div class="img-wrapper">
         <img src="img/All-History.jpg" alt="LoftyWorks" />
       </div>
+    </div>
       <div class="project" onclick="openModal('img/Destill-popup.jpg')">
         <h2>Destill</h2>
+        <div class="img-wrapper">
         <img src="img/Destill.jpg" alt="LoftyWorks" />
       </div>
+    </div>
       <div class="project" onclick="openModal('img/Yunyan-popup.jpg')">
         <h2>Yunyan</h2>
+        <div class="img-wrapper">
         <img src="img/Yunyan.jpg" alt="LoftyWorks" />
       </div>
+    </div>
       <div class="project" onclick="openModal('img/Others.jpg')">
         <h2>More Projects</h2>
+        <div class="img-wrapper">
         <img src="img/More.jpg" alt="LoftyWorks" />
       </div>
+    </div>
     </section>
 
     <!-- Modal -->
