--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <img src="img/Lofty.jpg" alt="Lofty project" />
       </div>
       </div>
-      <div class="project" onclick="openModal('img/loftyworks-popup.jpg')">
+      <div class="project" onclick="openModal('img/Loftyworks-popup.jpg')">
         <h2>LoftyWorks</h2>
         <div class="img-wrapper">
         <img src="img/Loftyworks.jpg" alt="Website Templates" />
